--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,15 @@
 #map {
-	height: 300px;
-	width: 300px;
+	height: 600px;
+	width: 600px;
 }
 #map-card {
-	display:none;
-	position:sticky;
+	display: none;
+	position: sticky;
 	top: 0;
 }
 
-#from, #to{
+#from,
+#to {
 	border-radius: 4px;
 }
 
@@ -26,7 +27,7 @@ nav {
 	max-width: 600px;
 }
 /* Optional: Makes the sample page fill the window. */
-/* html,
+html,
 body {
 	height: 100%;
 	margin: 0;
@@ -90,4 +91,4 @@ body {
 		float: none;
 		width: auto;
 	}
-} */
+}
