--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 #map {
-	height: 600px;
-	width: 600px;
+	height: 400px;
+	width: 400px;
 }
 #map-card {
 	display: none;
@@ -69,6 +69,7 @@ body {
 	float: right;
 	width: 390px;
 	overflow: auto;
+	background-color: blue;
 }
 #map {
 	margin-right: 400px;
@@ -80,11 +81,11 @@ body {
 	font-family: Arial;
 	border: 1px solid #ccc;
 	box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
-	display: none;
+	/* display: none; */
 }
 @media print {
 	#map {
-		height: 500px;
+		height: 300px;
 		margin: 0;
 	}
 	#right-panel {
